--- a/source/content_index.html
+++ b/source/content_index.html
@@ -11,21 +11,24 @@
 					<p class="lead">Hello! I am a research scientist of Intel visual computing lab located in beautiful California.</p>
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
-					<li class="list-group-item">
-						2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="http://www.open3d.org" target="_blank">www.open3d.org</a>.
-					</li>
-					<li class="list-group-item">
-						2017.12. A learning-based method for depth from light field is accepted to PAMI. Paper comming soon.
-					</li>
-					<li class="list-group-item">
-						2017.08. Launching new homepage for better visualization on workstation and mobile.
-					</li>
-					<li class="list-group-item">
-						2017.05. We are releasing <a href="http://www.tanksandtemples.org" target="_blank">www.tanksandtemples.org</a>: website for benchmarking photogrammetry methods.
-					</li>
-					<li class="list-group-item">
-						2017.05. Our paper about image based 3D reconstruction benchmark is accepted to SIGGRAPH 2017.
-					</li>
+						<li class="list-group-item">
+							2018.03. Our paper about new convolution framework for large-scale point cloud segmentation is accepted to CVPR 2018</a>.
+						</li>
+						<li class="list-group-item">
+							2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="http://www.open3d.org" target="_blank">www.open3d.org</a>.
+						</li>
+						<li class="list-group-item">
+							2017.12. A learning-based method for depth from light field is accepted to PAMI. Paper comming soon.
+						</li>
+						<li class="list-group-item">
+							2017.08. Launching new homepage for better visualization on workstation and mobile.
+						</li>
+						<li class="list-group-item">
+							2017.05. We are releasing <a href="http://www.tanksandtemples.org" target="_blank">www.tanksandtemples.org</a>: website for benchmarking photogrammetry methods.
+						</li>
+						<li class="list-group-item">
+							2017.05. Our paper about image based 3D reconstruction benchmark is accepted to SIGGRAPH 2017.
+						</li>
 					</ul>
 			</div>
 			</div>
