clean file structure

--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
 
 <head>
 
-		<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,6 +32,7 @@
 </head>
 
 <body id="page-top" class="index">
+
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
 	<div class="container">
@@ -67,6 +68,7 @@
 <!-- /.container-fluid -->
 </nav>
 
+
 <!-- Header -->
 <header>
 	<div class="container" id="maincontent" tabindex="-1">
@@ -92,12 +94,11 @@
 </header>
 
 
-<div class="container">
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12 text-left">
-			<h2 class="name">2018</h2>
-		</div>
+<div class="container"> <!-- begin of publication list -->
+
+<div class="row">
+	<div class="col-lg-12 text-left">
+		<h2 class="name">2018</h2>
 	</div>
 </div>
 
@@ -168,11 +169,9 @@
 	</div>
 </div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12 text-left">
-			<h2 class="name">2017</h2>
-		</div>
+<div class="row">
+	<div class="col-lg-12 text-left">
+		<h2 class="name">2017</h2>
 	</div>
 </div>
 
@@ -233,11 +232,9 @@
 	</div>
 </div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12 text-left">
-			<h2 class="name">2016</h2>
-		</div>
+<div class="row">
+	<div class="col-lg-12 text-left">
+		<h2 class="name">2016</h2>
 	</div>
 </div>
 
@@ -368,11 +365,9 @@
 	</div>
 </div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12 text-left">
-			<h2 class="name">2015</h2>
-		</div>
+<div class="row">
+	<div class="col-lg-12 text-left">
+		<h2 class="name">2015</h2>
 	</div>
 </div>
 
@@ -427,11 +422,9 @@
 	</div>
 </div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12 text-left">
-			<h2 class="name">2014</h2>
-		</div>
+<div class="row">
+	<div class="col-lg-12 text-left">
+		<h2 class="name">2014</h2>
 	</div>
 </div>
 
@@ -521,11 +514,9 @@
 	</div>
 </div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12 text-left">
-			<h2 class="name">2013</h2>
-		</div>
+<div class="row">
+	<div class="col-lg-12 text-left">
+		<h2 class="name">2013</h2>
 	</div>
 </div>
 
@@ -545,11 +536,9 @@
 	</div>
 </div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12 text-left">
-			<h2 class="name">2012</h2>
-		</div>
+<div class="row">
+	<div class="col-lg-12 text-left">
+		<h2 class="name">2012</h2>
 	</div>
 </div>
 
@@ -613,11 +602,9 @@
 	</div>
 </div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12 text-left">
-			<h2 class="name">2011</h2>
-		</div>
+<div class="row">
+	<div class="col-lg-12 text-left">
+		<h2 class="name">2011</h2>
 	</div>
 </div>
 
@@ -653,14 +640,15 @@
 	</div>
 </div>
 
-</div>
+</div>  <!-- end of publication list -->
+
 <!-- Footer -->
 <footer>
 		<div class="container">
 				<div class="row">
 						<div class="col-lg-12">
 								<p><br></p>
-								<p class="copyright text-center">Copyright &copy; jaesik.info 2017.</p>
+								<p class="copyright text-center">Copyright &copy; jaesik.info 2018.</p>
 								<p><br></p>
 						</div>
 				</div>
