--- a/source/contact.html
+++ b/source/contact.html
@@ -1,4 +1,4 @@
-
+<!-- Source -->
 <div class="container">
 	<div class="col-lg-12 text-left">
 		<h3 class="name"> <span class="glyphicon glyphicon-envelope"></span> Email</h3>
