--- a/academic_activities.html
+++ b/academic_activities.html
@@ -3,7 +3,7 @@
 
 <head>
 
-		<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,6 +32,7 @@
 </head>
 
 <body id="page-top" class="index">
+
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
 	<div class="container">
@@ -67,6 +68,7 @@
 <!-- /.container-fluid -->
 </nav>
 
+
 <!-- Header -->
 <header>
 	<div class="container" id="maincontent" tabindex="-1">
@@ -81,8 +83,7 @@
 </header>
 
 
-<div class="container">
-
+<!-- Source -->
 <div class="container">
 	<div class="col-lg-6 text-left">
 			<h2> <span class="glyphicon glyphicon-sunglasses"></span>  Reviewer</h2>
@@ -188,7 +189,7 @@
 				<div class="row">
 						<div class="col-lg-12">
 								<p><br></p>
-								<p class="copyright text-center">Copyright &copy; jaesik.info 2017.</p>
+								<p class="copyright text-center">Copyright &copy; jaesik.info 2018.</p>
 								<p><br></p>
 						</div>
 				</div>
