--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-		<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="http://jaesik.info/source/favicon.ico">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,6 +32,7 @@
 </head>
 
 <body id="page-top" class="index">
+
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
 	<div class="container">
@@ -68,7 +69,7 @@
 </nav>
 
 
-<div class="container">
+<!-- Source -->
 <div class="container">
 	<div class="well">
 		<div class="row">
@@ -112,7 +113,7 @@
 				<div class="row">
 						<div class="col-lg-12">
 								<p><br></p>
-								<p class="copyright text-center">Copyright &copy; jaesik.info 2017.</p>
+								<p class="copyright text-center">Copyright &copy; jaesik.info 2018.</p>
 								<p><br></p>
 						</div>
 				</div>
