--- a/publications/depthups/header.html
+++ b/publications/depthups/header.html
@@ -1,3 +1,4 @@
+
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
 	<div class="container">
@@ -17,13 +18,13 @@
 				<li >
 					<a href="http://jaesik.info/about_me.html">About me</a>
 				</li>
-				<li >
+				<li class="active">
 					<a href="http://jaesik.info/publications.html">Publications</a>
 				</li>
 				<li >
 					<a href="http://jaesik.info/academic_activities.html">Academic activities</a>
 				</li>
-				<li class="active">
+				<li >
 					<a href="http://jaesik.info/contact.html">Contact</a>
 				</li>
 			</ul>
@@ -33,13 +34,14 @@
 <!-- /.container-fluid -->
 </nav>
 
+
 <!-- Header -->
 <header>
 	<div class="container" id="maincontent" tabindex="-1">
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="intro-text">
-					<h1>Contact</h1>
+					<h1>High Quality Depth Map Upsampling</h1>
 				</div>
 			</div>
 		</div>
@@ -47,4 +49,3 @@
 </header>
 
 
-<div class="container">
