--- a/publications.html
+++ b/publications.html
@@ -108,9 +108,9 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Tangent Convolutions for Dense Prediction in 3D</h3>
-		<p>Maxim Tatarchenko, Jaesik Park, Vladlen Koltun, and Qian-Yi Zhou<br>
+		<p>Maxim Tatarchenko*, Jaesik Park*, Vladlen Koltun, and Qian-Yi Zhou<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2018<br>
-		</p>
+		*Equal contributions.</p>
 		<a href="http://vladlen.info/publications/tangent-convolutions-dense-prediction-3d/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
