update academic activities

--- a/source/academic_activities.html
+++ b/source/academic_activities.html
@@ -5,11 +5,11 @@
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h3>International Conference</h3>
-					ACM SIGGRAPH 2017<br>
+					ACM SIGGRAPH 2017, 2018<br>
 					ACM SIGGRAPH ASIA 2016, 2017<br>
-					IEEE Computer Vision and Pattern Recognition (CVPR), 2014 - 2017<br>
+					IEEE Computer Vision and Pattern Recognition (CVPR), 2014 - 2018<br>
 					International Conference on Computer Vision (ICCV), 2015, 2017<br>
-					The European Conference on Computer Vision (ECCV), 2012, 2016<br>
+					The European Conference on Computer Vision (ECCV), 2012, 2016, 2018<br>
 					British Machine Vision Conference (BMVC), 2017<br>
 					International Conference on 3D Vision (3DV), 2015 - 2017<br>
 					Asian Conference on Computer Vision (ACCV), 2016<br>
