reorganize publication folder

--- a/publications.html
+++ b/publications.html
@@ -102,9 +102,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/18_cvpr.jpg" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/18_cvpr.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Tangent Convolutions for Dense Prediction in 3D</h3>
@@ -118,9 +118,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/18_arxiv.jpg" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/18_arxiv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Open3D: A Modern Library For 3D Data Processing</h3>
@@ -143,9 +143,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/18_ras.jpg" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/18_ras.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Real-time Head Pose Estimation using Multi-task Deep Neural Network</h3>
@@ -156,9 +156,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/18_pami.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/18_pami.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Depth from a Light Field Image with Learning-based Matching Costs</h3>
@@ -175,9 +175,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/17_iccv.jpg" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/17_iccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Colored Point Cloud Registration Revisited</h3>
@@ -187,19 +187,19 @@
 		<a href="http://redwood-data.org/indoor_lidar_rgbd/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<a href="publications/17_iccv.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/17_iccv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/17_iccv_supp.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/17_iccv_supp.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
 		<p><br></p>
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/17_siggraph.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/17_siggraph.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction</h3>
@@ -209,16 +209,16 @@
 		<a href="https://www.tanksandtemples.org/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<a href="publications/17_siggraph.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/17_siggraph.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 		<p><br></p>
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/17_cgf.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/17_cgf.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Category‐Specific Salient View Selection via Deep Convolutional Neural Networks</h3>
@@ -238,9 +238,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/16_pami.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/16_pami.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Robust Multiview Photometric Stereo using Planar Mesh Parameterization</h3>
@@ -254,9 +254,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/16_eccv.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/16_eccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Fast Global Registration</h3>
@@ -273,9 +273,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/16_ijcv.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/16_ijcv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Refining Geometry from Depth Sensors using IR Shading Images</h3>
@@ -289,9 +289,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/16_cvpr_color.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/16_cvpr_color.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Efficient and Robust Color Consistency for Community Photo Collections</h3>
@@ -305,9 +305,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/16_cvpr_sm.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/16_cvpr_sm.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>High-quality Depth from Uncalibrated Small Motion Clip</h3>
@@ -321,9 +321,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/16_icra.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/16_icra.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Vision System and Depth Processing for DRC-HUBO+</h3>
@@ -346,19 +346,19 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/16_tip.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/16_tip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Multi-view Object Extraction with Fractional Boundaries,</h3>
 		<p>Seong-Heum Kim, Yu-Wing Tai, Jaesik Park, and In So Kweon<br>
 		IEEE Transaction on Image Processing (<b>TIP</b>), 2016<br>
 		</p>
-		<a href="publications/16_tip.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/16_tip.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/16_tip.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/16_tip.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 		<p><br></p>
@@ -371,28 +371,28 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/15_3dv.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/15_3dv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Dense Depth and Albedo from a Single-shot Structured Light,</h3>
 		<p>Hyowon Ha, Jaesik Park, and In So Kweon<br>
 		International Conference on 3D Vision (<b>3DV</b>), 2015<br>
 		</p>
-		<a href="publications/15_3dv.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/15_3dv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/15_3dv.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/15_3dv.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 		<p><br></p>
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/15_cvpr_lf.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/15_cvpr_lf.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Accurate Depth Map Estimation from a Lenslet Light Field Camera</h3>
@@ -406,9 +406,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/15_cvpr_pd.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/15_cvpr_pd.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines</h3>
@@ -428,9 +428,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/14_tip.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/14_tip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>High Quality Depth Map Upsampling and Completion for RGB-D Cameras</h3>
@@ -444,47 +444,47 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/14_accv.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/14_accv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Real-time Head Orientation from a Monocular Camera using Deep Neural Network</h3>
 		<p>Byungtae Ahn, Jaesik Park, and In So Kweon<br>
 		Asian Conference on Computer Vision (<b>ACCV</b>), 2014<br>
 		</p>
-		<a href="publications/14_accv.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/14_accv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/14_accv.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/14_accv.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 		<p><br></p>
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/14_icip.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/14_icip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>GMM-based Saliency Aggregation for Calibration-free Gaze Estimation</h3>
 		<p>Jinsoo Choi, Byungtae Ahn, Jaesik Park, In So Kweon<br>
 		International Conference on Image Processing (<b>ICIP</b>), 2014<br>
 		</p>
-		<a href="publications/14_icip.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/14_icip.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/14_icip.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/14_icip.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 		<p><br></p>
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/14_cvpr_gm.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/14_cvpr_gm.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Exploiting Shading Cues in Kinect IR Images for Geometry Refinement</h3>
@@ -498,9 +498,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/14_cvpr_cal.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/14_cvpr_cal.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Calibrating a Non-isotropic Near Point Light Source using a Plane</h3>
@@ -520,9 +520,9 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/13_iccv.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/13_iccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Multiview Photometric Stereo using Planar Mesh Parameterization</h3>
@@ -542,53 +542,53 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/12_eccv.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/12_eccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement</h3>
 		<p>Jaesik Park, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai and In So Kweon<br>
 		European Conference on Computer Vision (<b>ECCV</b>), 2012<br>
 		</p>
-		<a href="publications/12_eccv.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/12_eccv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/12_eccv_poster.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/12_eccv_poster.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
-		<a href="publications/12_eccv.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/12_eccv.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 		<p><br></p>
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/12_icip.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/12_icip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Modeling Photo Composition and Its Application to Photo Re-arrangement</h3>
 		<p>Jaesik Park, Joon-Young Lee, Yu-Wing Tai and In So Kweon<br>
 		International Conference on Image Processing (<b>ICIP</b>), 2012<br>
 		</p>
-		<a href="publications/12_icip.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/12_icip.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/12_icip_poster.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/12_icip_poster.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
-		<a href="publications/12_icip.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/12_icip.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 		<p><br></p>
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/12_cvpr.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/12_cvpr.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Identigram/Watermark removal using cross-channel correlation</h3>
@@ -608,25 +608,25 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/11_iros.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/11_iros.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System</h3>
 		<p>Jiyoung Jung, Yekeun Jeong, Jaesik Park, Hyowon Ha, J. D. Kim and In-So Kweon<br>
 		IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2011<br>
 		</p>
-		<a href="publications/11_iros.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/data/11_iros.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 		<p><br></p>
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="height:200px">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/11_iccv.png" style="max-height:170px" class="img-responsive center-block">
+		<img src="publications/data/11_iccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>High Quality Depth Map Upsampling for 3D-TOF Cameras</h3>
